HelloUltraviolet/Fixtures/RejectedSource/Expressions/SyncInsideAsync/Expected.uv
//! Expected diagnostic metadata for the SyncInsideAsync rejected-source specimen.

expectedDiagnostic("E-CON-0250", "rule.21.Sync-Async-Context-Err")
